source/css/source.css
@import 'typo.css';
@import 'normalize.css';


$black-normal: #505050;
$black-bold: $111;
$black-light: #222;
$grey: #aeb4b9;
$grey-bold: #777;
$grey-light: #cacdd0;
$scooter: #22C5E5;
$content-width: 60%;
$content-max-width: 700px;
$mobile-content-width: 80%;


@define-extend a-hover {
  color: $scooter;
  border-bottom: solid 1px RGBA(34, 197, 229, .2);
  transition: color 100ms linear
}

@define-extend hr-base {
  height: 1px;
  border: 0;
  background-image: -webkit-linear-gradient(0deg, transparent, #d5d5d5, transparent);
}

@define-extend nav-link-base {
  margin-right: 10px;
  color: $grey-bold;
  padding-bottom: 5px;
  display: inline-block;
  border: 0;
}


html,
body {
  width: 100%;
  height: 100%;
  position: relative;
  box-sizing: border-box;
  color: $black-light;
}

body, h1, h2, h3, h4, h5, h6 {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-feature-settings: "liga" on;
  transition: all 250ms ease;
}

body {
  font-family: Baskerville, "Times New Roman", "Liberation Serif", STFangsong, FangSong, FangSong_GB2312, "CWTEX\-F", serif;
  font-size: 20px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
}

a {
  color: $black-light;
  /* font-weight: 200; */
  text-decoration: none;
  transition: color 250ms linear;
  cursor: pointer;
}
a:hover {
  text-decoration: none;
  @extend a-hover;
}

em {
  font-style: italic;
  font-weight: lighter;
}

b, strong {
  font-weight: bold;
}

blockquote {
  color: #666;
  border-left: 2px solid #666;
  padding-left: 1em;
  margin: 1em 3em 1em -1em;
}

.footer {
  box-sizing: border-box;
}

.home-footer {
  padding: 50px 0;
}

.archive-footer, .post-footer {
  width: 100%;
  margin: 0 auto;
  padding: 50px 0;
  hr {
    @extend hr-base;
  }
  color: $grey-light;
  a, b, strong {
    color: $grey;
  }

}

.container {
  width: 100%;
}

.copyright, .footer-content, .footer-links {
  text-align: center;
  width: 100%;
  font-size: 90%;
  color: $grey-light;
  /* opacity: .6; */
  li {
    display: inline-block;
  }

  a {
    color: $grey-bold;
  }
  a:hover {
    color: $scooter;
  }
}

.archive-footer, .post-footer {
  width: $content-width;
  max-width: $content-max-width;
}

.footer-content {
  margin: 0 auto;
  text-align: left;
}

.footer-links {
  a {
    text-decoration: none;
  }
  font-size: 100%;
  padding: 0;
  li {
    margin: 0 5px;
  }
}

.home-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.home {
  font-weight: lighter;
  line-height: 1.4;
  color: $black-normal;
  text-align: center;
  position: relative;

  a {
    border-bottom: solid 1px #eee;
  }

  .content {
    width: $content-width;
    max-width: 500px;
    position: relative;
    margin: 0 auto;
  }

  h1,
  strong {
    color: $black-light;
  }

  hr {
    @extend hr-base;
    width: 80%;
    max-width: 300px;
    margin: 20px auto;
  }

  li {
    list-style: none;
  }

  .profile {
    width: 100%;

    h1 {
      font-weight: 300;
    }
  }

}

.main-nav-link {
  @extend nav-link-base;
}
.nav-left {
  position: absolute;
  left: -130px;
  text-align: right;
  .main-nav-link {
    display: block;
    padding-bottom: 10px;
  }
}
.header-hr-left {
  display: none;
}

.mobile-nav {
  display: none;
}

.archive-container,
.category-container,
.tag-container {
  width: $content-width;
  margin: 0 auto;
  position: relative;
  line-height: 1;
  text-align: left;
  font-size: 18px;
  padding-top: 50px;
  max-width: $content-max-width;

  article {
    margin-bottom: 15px;
  }

  a {
    border: 0;
  }
  a:hover {
    border: 0;
  }

  .header {
    font-size: 18px;
  }

  .archive-article-header {
    > a, > h1 {
      display: inline-block;
      vertical-align: middle;
    }
    > a {
      width: 100px;
    }

    h1 {
      width: calc(100% - 120px);
      font-size: 100%;
      margin: 0;
    }
  }

  hr {
    width: 60%;
    margin: 20px 0 40px 0;
    @extend hr-base;
    background-image: -webkit-linear-gradient(0deg, #d5d5d5, #d5d5d5, transparent);
  }


  .archive-article-date {
    font-size: 80%;
    color: $grey-light;
  }
  .archive-article-title {
    font-weight: 200;
  }

  .archive-year-wrap {
    margin-bottom: 20px;
  }

  .page-nav {
    text-align: center;
    margin-top: 30px;
    color: $grey;
    a {
      color: $grey-bold;
    }
  }

  .page-number,
  .extend {
    margin-right: 15px;
  }
}
/* ... */

